# data-platform

./: pyproject.toml
services/server/: Dockerfile  README.md  main.py  pyproject.toml
