[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Todor Lubenov <tlubenov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
